# python-crawler

./: README.md  main.py  pyproject.toml  requirements.txt
data/: save.py
