[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crawler"
version = "0.0.1"
authors = [
  { name="Barry Melton", email="barry@sureisfun.com" },
]
description = "A simple crawler that acts as the backbone for other operations"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bmelton/python-crawler"
"Bug Tracker" = "https://github.com/bmelton/python-crawler/issues"